FISH-12236 Implement /events endpoint