@@ -1,14 +1,53 @@
+/*
+ *
+ * Copyright (c) 2025 Payara Foundation and/or its affiliates. All rights reserved.
+ *
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License.  You can
+ * obtain a copy of the License at
+ * https://github.com/payara/Payara/blob/master/LICENSE.txt
+ * See the License for the specific
+ * language governing permissions and limitations under the License.
+ *
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at glassfish/legal/LICENSE.txt.
+ *
+ * GPL Classpath Exception:
+ * The Payara Foundation designates this particular file as subject to the "Classpath"
+ * exception as provided by the Payara Foundation in the GPL Version 2 section of the License
+ * file that accompanied this code.
+ *
+ * Modifications:
+ * If applicable, add the following below the License Header, with the fields
+ * enclosed by brackets [] replaced by your own identifying information:
+ * "Portions Copyright [year] [name of copyright owner]"
+ *
+ * Contributor(s):
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
 package fish.payara.console.dev.resources;
 
 import fish.payara.console.dev.cdi.dto.BeanDTO;
 import fish.payara.console.dev.cdi.dto.BeanGraphDTO;
-import fish.payara.console.dev.cdi.dto.ObserverDTO;
 import fish.payara.console.dev.cdi.dto.SecurityAnnotationDTO;
 import fish.payara.console.dev.core.DevConsoleExtension;
 import fish.payara.console.dev.core.DevConsoleRegistry;
 import fish.payara.console.dev.rest.dto.DecoratorInfo;
+import fish.payara.console.dev.rest.dto.EventDTO;
 import fish.payara.console.dev.rest.dto.InterceptedClassInfo;
 import fish.payara.console.dev.rest.dto.InterceptorInfo;
+import fish.payara.console.dev.rest.dto.ObserverDTO;
 import fish.payara.console.dev.rest.dto.ProducerInfo;
 import fish.payara.console.dev.rest.dto.RestMethodDTO;
 import fish.payara.console.dev.rest.dto.RestResourceDTO;
@@ -117,11 +156,38 @@ public class DevConsoleResource {
     @Path("/observers")
     public Response getObservers() {
         guard();
+
         var observers = registry.getObservers();
         var observerDTOs = observers.stream()
-                .map(o -> new ObserverDTO(o))
-                .collect(Collectors.toList());
+                .map(o -> new ObserverDTO(
+                o.getObservedType().getTypeName(),
+                o.getBeanClass().getName(),
+                o.getObservedQualifiers().stream()
+                        .map(a -> a.annotationType().getName())
+                        .toList(),
+                o.getTransactionPhase().name(),
+                o.getReception().name()
+        ))
+                .toList();
+
         return Response.ok(observerDTOs).build();
+    }
+
+    @GET
+    @Path("/events")
+    public Response getRecentEvents() {
+        guard();
+
+        var events = registry.getRecentEvents().stream()
+                .map(ev -> new EventDTO(
+                ev.getEventType(),
+                ev.getFiredBy(),
+                ev.getTimestamp(),
+                ev.getResolvedObservers()
+        ))
+                .toList();
+
+        return Response.ok(events).build();
     }
 
     @GET
